# paginator-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build-test.yml
paginator/: Cargo.toml
paginator-actix/: Cargo.toml
paginator-actix/src/: lib.rs
paginator-axum/: Cargo.toml
paginator-axum/src/: lib.rs  link.rs  parser.rs  query.rs  response.rs
paginator-examples/: Cargo.toml
paginator-examples/src/: lib.rs
paginator-examples/src/examples/: users_repository.rs
paginator-examples/src/tests/: mod.rs  paginator_test.rs
paginator-rocket/: Cargo.toml
paginator-rocket/src/: lib.rs
paginator-rs/: Cargo.toml
paginator-rs-web/: astro.config.mjs  package-lock.json  package.json
paginator-rs-web/src/content/docs/: index.mdx
paginator-rs-web/src/content/docs/advanced/: error-handling.md  performance.md  query-parameters.md  security.md
paginator-rs-web/src/content/docs/core-concepts/: builder-pattern.md  cursor-pagination.md  filtering.md  response-format.md  search.md  sorting.md
paginator-rs-web/src/content/docs/database-integrations/: sea-orm.md  sqlx.md  surrealdb.md
paginator-rs-web/src/content/docs/getting-started/: installation.md  quick-start.md
paginator-rs-web/src/content/docs/web-frameworks/: actix.md  axum.md  rocket.md
paginator-rs/src/: builder.rs  error.rs  lib.rs  trait_impl.rs
paginator-sea-orm/: Cargo.toml
paginator-sea-orm/src/: lib.rs
paginator-sqlx/: Cargo.toml
paginator-sqlx/src/: common.rs  lib.rs  mysql.rs  postgres.rs  query_builder.rs  sqlite.rs
paginator-surrealdb/: Cargo.toml
paginator-surrealdb/src/: builder.rs  lib.rs  query.rs  table.rs
paginator-surrealdb/tests/: query_builder_tests.rs
paginator-utils/: Cargo.toml
paginator-utils/src/: cursor.rs  filter.rs  lib.rs  params.rs  response.rs  search.rs
paginator/src/: lib.rs
