[package]
name = "paginator-actix"
version = "0.2.1"
edition = "2021"
authors = ["Maulana Sodiqin <sodiqincahyana1@gmail.com>"]
description = "Actix-web framework integration for paginator-rs"
license = "MIT"
repository = "https://github.com/maulanasdqn/paginator-rs"
readme = "../README.md"
keywords = ["pagination", "actix", "actix-web", "web", "rest"]
categories = ["web-programming"]

[dependencies]
paginator-rs = { path = "../paginator-rs", version = "0.2.1" }
paginator-utils = { path = "../paginator-utils", version = "0.2.1" }
serde = { workspace = true }
serde_json = { workspace = true }
actix-web = "4.9"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
