[package]
name = "paginator-rs"
version = "0.1.0"
edition = "2021"
authors = ["Maulana Sodiqin <your@email.com>"]
description = "Pagination trait for Rust collections"
license = "MIT"
repository = "https://github.com/your-username/paginator-rs"
readme = "../README.md"
keywords = ["pagination", "trait", "serde"]
categories = ["data-structures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
paginator-utils = "0.1.0"
