[package]
name = "paginator-sea-orm"
version = "0.2.2"
edition = "2021"
authors = ["Maulana Sodiqin <sodiqincahyana1@gmail.com>"]
description = "SeaORM integration for paginator-rs with entity pagination support"
license = "MIT"
repository = "https://github.com/maulanasdqn/paginator-rs"
readme = "../README.md"
keywords = ["pagination", "sea-orm", "database", "orm"]
categories = ["database"]

[dependencies]
paginator-rs = { path = "../paginator-rs", version = "0.2.2" }
paginator-utils = { path = "../paginator-utils", version = "0.2.2" }
serde = { workspace = true }
sea-orm = { version = "1.1", default-features = false, features = ["with-uuid"] }
async-trait = "0.1"
uuid = "1"

[features]
default = []
sqlx-postgres = ["sea-orm/sqlx-postgres"]
sqlx-mysql = ["sea-orm/sqlx-mysql"]
sqlx-sqlite = ["sea-orm/sqlx-sqlite"]
runtime-tokio = ["sea-orm/runtime-tokio"]
runtime-async-std = ["sea-orm/runtime-async-std"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
