[package]
name = "paginator-sqlx"
version = "0.1.1"
edition = "2021"
authors = ["Maulana Sodiqin <sodiqincahyana1@gmail.com>"]
description = "SQLx integration for paginator-rs with PostgreSQL, MySQL, and SQLite support"
license = "MIT"
repository = "https://github.com/maulanasdqn/paginator-rs"
readme = "../README.md"
keywords = ["pagination", "sqlx", "database", "postgres", "mysql"]
categories = ["database"]

[dependencies]
paginator-rs = { workspace = true }
paginator-utils = { workspace = true }
serde = { workspace = true }
sqlx = { version = "0.8", default-features = false }

[features]
default = []
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]
runtime-tokio = ["sqlx/runtime-tokio"]
runtime-async-std = ["sqlx/runtime-async-std"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
