[package]
name = "paginator-utils"
version = "0.1.2"
edition = "2021"
authors = ["Maulana Sodiqin <your@email.com>"]
description = "Shared pagination response structures"
license = "MIT"
repository = "https://github.com/your-username/paginator-rs"
readme = "../README.md"
keywords = ["pagination", "rust", "serde"]
categories = ["data-structures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
