[package]
name = "paginator-utils"
version = "0.2.2"
edition = "2021"
authors = ["Maulana Sodiqin <sodiqincahyana1@gmail.com>"]
description = "Shared pagination response structures"
license = "MIT"
repository = "https://github.com/maulanasdqn/paginator-rs"
readme = "../README.md"
keywords = ["pagination", "rust", "serde"]
categories = ["data-structures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"
