[package]
name = "paginator"
version = "0.1.0"
edition = "2024"
authors = ["maulanasdqn <maulanasdqn@gmail.com>"]
license = "MIT"
repository = "https://github.com/maulanasdqn/paginator-rs"
description = "A modular Rust library providing a reusable trait for paginating any serializable collection."

[dependencies]
paginator-utils = { version = "0.1.0", path = "../paginator-utils" }
serde.workspace = true
serde_json.workspace = true
